# promo-hunter

./: .env-template  .gitignore  README.md  main.py  pyproject.toml
bots/: telegram_bot.py
scrapers/: kabum.py
utils/: driver.py  file_manager.py
